# zxgame

./: .gitignore  CMakeLists.txt  README.md
src/: dice.h  main.cpp
tests/: CMakeLists.txt  test_dice.cpp
